<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.quizapp.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin"
        android:orientation="vertical"
        android:focusableInTouchMode="true">
        
        <ImageView
            android:id="@+id/russia_icon"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/russia"
            android:adjustViewBounds="true"
            android:layout_marginBottom="@dimen/margin"/>

        <LinearLayout
            android:id="@+id/question1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/question_fontSize"
                android:layout_marginBottom="@dimen/margin"
                android:text="@string/question1"/>

            <CheckBox
                android:id="@+id/kazan_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/answer_fontSize"
                android:layout_marginLeft="@dimen/left_margin"
                android:paddingLeft="@dimen/left_padding"
                android:text="@string/kazan" />

            <CheckBox
                android:id="@+id/moscow_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/answer_fontSize"
                android:layout_marginLeft="@dimen/left_margin"
                android:paddingLeft="@dimen/left_padding"
                android:text="@string/moscow" />

            <CheckBox
                android:id="@+id/peter_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/answer_fontSize"
                android:layout_marginLeft="@dimen/left_margin"
                android:paddingLeft="@dimen/left_padding"
                android:text="@string/peterburg" />

            <CheckBox
                android:id="@+id/sochi_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/answer_fontSize"
                android:layout_marginLeft="@dimen/left_margin"
                android:paddingLeft="@dimen/left_padding"
                android:text="@string/sochi" />

            <CheckBox
                android:id="@+id/samara_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/answer_fontSize"
                android:layout_marginLeft="@dimen/left_margin"
                android:paddingLeft="@dimen/left_padding"
                android:text="@string/samara"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/question2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin"
                android:text="@string/question2"
                android:textSize="@dimen/question_fontSize" />

            <RadioGroup
                android:id="@+id/populationRadioGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RadioButton
                    android:id="@+id/radio_7"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/left_margin"
                    android:layout_weight="1"
                    android:paddingLeft="@dimen/left_padding"
                    android:text="@string/seven_mil"
                    android:textSize="@dimen/answer_fontSize" />

                <RadioButton
                    android:id="@+id/radio_10"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/left_margin"
                    android:layout_weight="1"
                    android:paddingLeft="@dimen/left_padding"
                    android:text="@string/ten_mil"
                    android:textSize="@dimen/answer_fontSize" />

                <RadioButton
                    android:id="@+id/radio_12"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/left_margin"
                    android:layout_weight="1"
                    android:paddingLeft="@dimen/left_padding"
                    android:text="@string/twelve_mil"
                    android:textSize="@dimen/answer_fontSize" />

                <RadioButton
                    android:id="@+id/radio_15"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/left_margin"
                    android:layout_weight="1"
                    android:paddingLeft="@dimen/left_padding"
                    android:text="@string/fifteen_mil"
                    android:textSize="@dimen/answer_fontSize" />
            </RadioGroup>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/question3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/question_fontSize"
                android:layout_marginBottom="@dimen/margin"
                android:text="@string/question3"/>

            <EditText
                android:id="@+id/capital_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/answer_fontSize"
                android:layout_marginLeft="@dimen/left_margin"
                android:layout_marginRight="@dimen/left_margin"
                android:hint="@string/type_answer" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/question4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/question_fontSize"
                android:layout_marginBottom="@dimen/margin"
                android:text="@string/question4"/>

            <RadioGroup
                android:id="@+id/timezoneRadioGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RadioButton
                    android:id="@+id/radio_5z"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/left_margin"
                    android:text="@string/zone5"
                    android:textSize="@dimen/answer_fontSize"
                    android:paddingLeft="@dimen/left_padding"
                    android:layout_weight="1" />

                <RadioButton
                    android:id="@+id/radio_7z"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/left_margin"
                    android:text="@string/zone7"
                    android:paddingLeft="@dimen/left_padding"
                    android:textSize="@dimen/answer_fontSize"
                    android:layout_weight="1" />

                <RadioButton
                    android:id="@+id/radio_9z"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/left_margin"
                    android:paddingLeft="@dimen/left_padding"
                    android:text="@string/zone9"
                    android:textSize="@dimen/answer_fontSize"
                    android:layout_weight="1" />

                <RadioButton
                    android:id="@+id/radio_11z"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/left_margin"
                    android:text="@string/zone11"
                    android:paddingLeft="@dimen/left_padding"
                    android:layout_weight="1"
                    android:textSize="@dimen/answer_fontSize" />
            </RadioGroup>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/question5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/question_fontSize"
                android:layout_marginBottom="@dimen/margin"
                android:text="@string/question5"/>

            <RadioGroup
                android:id="@+id/cultureRadioGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RadioButton
                    android:id="@+id/radio_mos"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/left_margin"
                    android:text="@string/moscow"
                    android:textSize="@dimen/answer_fontSize"
                    android:paddingLeft="@dimen/left_padding"
                    android:layout_weight="1" />

                <RadioButton
                    android:id="@+id/radio_peter"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/left_margin"
                    android:text="@string/peterburg"
                    android:paddingLeft="@dimen/left_padding"
                    android:textSize="@dimen/answer_fontSize"
                    android:layout_weight="1" />

                <RadioButton
                    android:id="@+id/radio_ekat"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/left_margin"
                    android:paddingLeft="@dimen/left_padding"
                    android:text="@string/ekaterinburg"
                    android:textSize="@dimen/answer_fontSize"
                    android:layout_weight="1" />

                <RadioButton
                    android:id="@+id/radio_sib"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/left_margin"
                    android:text="@string/novosibirsk"
                    android:paddingLeft="@dimen/left_padding"
                    android:layout_weight="1"
                    android:textSize="@dimen/answer_fontSize" />
            </RadioGroup>

        </LinearLayout>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/question_fontSize"
            android:text="@string/submit"
            android:layout_gravity="end"
            android:layout_margin="@dimen/button_margin"
            android:onClick="submit"/>

    </LinearLayout>
</ScrollView>
